--- a/style.css
+++ b/style.css
@@ -19,24 +19,24 @@ h2 {
   position: absolute;
   background: rgba(0, 200, 200, 0.7);
   background-image: linear-gradient(black, white);
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 660px;
-  height: 495px;
+  top: 20%;
+  left: 0;
+  width: 100%;
+  height: 80%;
+  /* transform: translate(-50%, -50%); */
+  /* width: 660px;
+  height: 495px; */
   border: 2px solid black;
   z-index: 1;
 }
 
 #snow-layer {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 600px;
-  height: 450px;
+  top: 20%;
+  left: 0;
+  width: 100%;
+  height: 80%;
   border: 2px solid black;
-  transform: translate(-50%, -50%);
 
   z-index: 2;
 }
@@ -44,11 +44,12 @@ h2 {
 #game-layer {
   position: absolute;
   background: rgba(23, 200, 200, 0.2);
-  top: 50%;
-  left: 50%;
-  transform: translate(-51%, -51%);
-  width: 600px;
-  height: 450px;
+  top: 20%;
+  left: 0;
+  width: 100%;
+  height: 80%;
+  /* width: 600px;
+  height: 450px; */
   border: 2px solid black;
   z-index: 3;
 }
