--- a/style.css
+++ b/style.css
@@ -5,51 +5,45 @@ body {
 }
 
 h1 {
-  text-align: center;
+  text-align: left;
   color: mistyrose;
 }
 
 h2 {
-  text-align: center;
+  text-align: left;
   font-size: 1em;
   color: gainsboro;
 }
 
 #background-layer {
-  position: absolute;
+  position: fixed;
   background: rgba(0, 200, 200, 0.7);
   background-image: linear-gradient(black, white);
   top: 20%;
-  left: 0;
   width: 100%;
-  height: 80%;
-  /* transform: translate(-50%, -50%); */
-  /* width: 660px;
-  height: 495px; */
+  height: 70%;
+  max-width: 600px;
   border: 2px solid black;
   z-index: 1;
 }
 
 #snow-layer {
-  position: absolute;
+  position: fixed;
   top: 20%;
-  left: 0;
   width: 100%;
-  height: 80%;
+  height: 70%;
+  max-width: 600px;
   border: 2px solid black;
-
   z-index: 2;
 }
 
 #game-layer {
-  position: absolute;
+  position: fixed;
   background: rgba(23, 200, 200, 0.2);
   top: 20%;
-  left: 0;
   width: 100%;
-  height: 80%;
-  /* width: 600px;
-  height: 450px; */
+  height: 70%;
+  max-width: 600px;
   border: 2px solid black;
   z-index: 3;
 }
